--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ coverage.xml
 /data/input/data_time_series/train_y.csv
 /data/input/data_time_series/val_X.csv
 /data/input/data_time_series/val_y.csv
+/guesser_eICU/best_guesser.pth
